# PawVision

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  VIDEO_LIBRARY_FEATURE.md  default_settings.json  install.sh  main.py  pawvision.db  pawvision.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: jekyll-gh-pages.yml  jekyll.yml  tests.yml
docs/: Gemfile  _config.yml  api.md  configuration.md  developer.md  development.md  hardware.md  index.html  index.md  releases.md  test-theme.html
docs/pawvision-theme/: README.md  pawvision-theme.html  pawvision.js  styles.css
pawvision/: __init__.py  config.py  database.py  gpio_handler.py  logging_config.py  main.py  security.py  statistics.py  statistics_unified.py  time_utils.py  video_library.py  video_player.py  web_interface.py  youtube_manager.py
static/: pawvision.js  styles.css
static/css/: README.md  base.css  buttons.css  components.css  config.css  control.css  forms.css  layout.css  main.css  modals.css  statistics.css
static/js/: README.md  app.js  config.js  control.js  forms.js  library.js  main.js  modal.js  navigation.js  statistics.js  utils.js  video.js  youtube.js
templates/: dashboard.html  index.html  index.html.backup
templates/includes/: config_content.html  control_content.html  footer.html  header.html  playlist_content.html  statistics_content.html
tests/: test_config.py  test_gpio.py  test_integration.py  test_security.py  test_statistics.py  test_time_utils.py  test_video_cache.py  test_video_library.py  test_web_interface.py  test_youtube.py
